--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,9 +1,8 @@
-.container-fluid {
+.container-fluid, .row, .col-2, .col-10 {
     padding: 0;
     margin: 0;
 }
-.col-2 .col-10 {
-    padding: 0;
-    margin: 0;
+.menu {
+  position: fixed;
+  z-index: 100;
 }
-
