--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,9 @@
 <div class="container-fluid">
   <div class='row'>
-    <div class="col-2">
+    <div class="col-2 menu">
         <app-menu></app-menu>
     </div>
+    <div class="col-2"></div>
     <div class='col-10'>
       <router-outlet></router-outlet>
     </div>
