--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,25 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 body {
     background-image: linear-gradient(#3d3d3d, #0a0a0a 90%);
-    width: 100%;
-    height: 100vh;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+  background-color: #0a0a0a;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  /*box-shadow: inset 0 0 5px black;*/
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #1DB954;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #4d4d4d;
 }
