--- a/src/app/playlist/playlist.component.html
+++ b/src/app/playlist/playlist.component.html
@@ -11,7 +11,7 @@
           <div class="card-text">
             <p>{{item.track.artists[0].name}}</p>
           </div>
-          <button class='btn'><fa-icon [icon]="faPlay"></fa-icon></button>
+          <button class='btn'><fa-icon [icon]="faPlay" (click)=playerService.playSong(item.track.uri)></fa-icon></button>
         </div>
       </div>
 
