--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,10 @@
 <div class="container-fluid">
   <app-menu></app-menu>
   <div class='row'>
-    <div class="col-2"></div>
-    <div class='col-10'>
+    <div class="col-lg-2"></div>
+    <div class='col-lg-10'>
       <router-outlet></router-outlet>
     </div>
   </div>
+  <app-playback-bar></app-playback-bar>
 </div>
