now playing part 1, update title, cover art and artist name

--- a/src/app/playback-bar/playback-bar.component.html
+++ b/src/app/playback-bar/playback-bar.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="miusic">
+    <div class="music">
       <div class="img">
-        <img src="assets/img/test.jpg" alt="error img...">
+        <img src={{currentTrack.cover}} alt="error img...">
       </div>
       <div class="autor">
-        <p>don't cry</p>
-        <p>sadeyes</p>
+        <p>{{currentTrack.name}}</p>
+        <p>{{currentTrack.artist}}</p>
       </div>
       <div class="icons">
         <span><img src="assets/img/heart0.svg" alt="asdas"></span>
