--- a/src/app/playlist/playlist.component.css
+++ b/src/app/playlist/playlist.component.css
@@ -16,6 +16,8 @@
   justify-content: center;
   align-items: center;
   padding-left: 100px;
+  height: 80vh;
+  overflow-y: scroll;
 }
 .card {
   width: 250px;
