--- a/src/app/playlist/playlist.component.html
+++ b/src/app/playlist/playlist.component.html
@@ -3,7 +3,7 @@
     <h1>{{playlistName}}:</h1>
   </div>
   <div class="row list">
-    <ng-container *ngFor="let item of tracksArray">
+    <ng-container *ngFor="let item of tracksArray; index as i">
       <div class="card">
         <img class="card-img-top" [src]="item.track.album.images[0].url" alt="Card image cap" />
         <div class="card-body">
@@ -11,7 +11,7 @@
           <div class="card-text">
             <p>{{item.track.artists[0].name}}</p>
           </div>
-          <button class='btn'><fa-icon [icon]="faPlay" (click)=playerService.playSong(item.track.uri)></fa-icon></button>
+          <button class='btn'><fa-icon [icon]="faPlay" (click)=playerService.playSong(playlistUri,i)></fa-icon></button>
         </div>
       </div>
 
