remove broken player

--- a/src/app/playback-bar/playback-bar.component.html
+++ b/src/app/playback-bar/playback-bar.component.html
@@ -14,9 +14,9 @@
     </div>
     <div class="controls">
       <div class="controls-track">
-        <span (click)="playerService.skipSong('previous')"><img src="assets/img/arrowLeft1.svg" alt="asdas"></span>
+        <span><img src="assets/img/arrowLeft1.svg" alt="asdas"></span>
         <span><img src="assets/img/playArrow.svg" alt="asdas"></span>
-        <span (click)="playerService.skipSong('next')"><img src="assets/img/arrowRight1.svg" alt="asdas"></span>
+        <span><img src="assets/img/arrowRight1.svg" alt="asdas"></span>
       </div>
       <div class="playback">
         <span>0:00</span>
