--- a/src/app/playback-bar/playback-bar.component.html
+++ b/src/app/playback-bar/playback-bar.component.html
@@ -21,9 +21,9 @@
       <div class="playback">
         <span>0:00</span>
         <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+          <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" [style.width]="currentTrack.progress+'%'"></div>
         </div>
-        <span>3:32</span>
+        <span>{{currentTrack.duration.min+":"+currentTrack.duration.sec}}</span>
       </div>
     </div>
     <div class="volume">
