--- a/src/app/playback-bar/playback-bar.component.html
+++ b/src/app/playback-bar/playback-bar.component.html
@@ -24,7 +24,9 @@
       <div class="playback">
         <span>{{progressString}}</span>
         <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" [style.width]="progress"></div>
+            <input class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" type="range" min="1" max="100" [value]="progress"
+              (mouseup)="seek($event)"
+            >
         </div>
         <span>{{currentTrack.duration.min}}:{{currentTrack.duration.sec}}</span>
       </div>
